# ChaYe-Chat

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
assets/convo/openai/: convo1.json  convo2.json  openai_1.json  openai_2.json  openai_3.json  openai_table.json
src/: api_anthropic.rs  api_deepseek.rs  api_openai.rs  main.rs
